--- a/src/app/post-input.html
+++ b/src/app/post-input.html
@@ -4,29 +4,30 @@
 <link rel="import" href="/bower_components/paper-card/paper-card.html">
 <link rel="import" href="/bower_components/paper-input/paper-input-char-counter.html">
 <link rel="import" href="/bower_components/paper-input/paper-textarea.html">
+<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
 <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
 
 
 <dom-module id="post-input">
     <template>
-            <custom-style>
-                    <style is="custom-style">
-                      textarea.text {
-                        @apply --paper-input-container-shared-input-style;
-                      }
-                    </style>
-                  </custom-style>
+        <custom-style>
+            <style is="custom-style">
+                textarea.text {
+                    @apply --paper-input-container-shared-input-style;
+                }
+            </style>
+        </custom-style>
         <style>
             .post {
                 width: 500px;
                 top: 50%;
-                left: 50%;
+                left: 30%;
                 display: flex;
                 flex-direction: column;
                 padding: 30px;
                 text-align: justify;
-                
+
             }
 
             paper-input.custom {
@@ -35,6 +36,7 @@
                 }
                 ;
             }
+
             paper-input-container.custom {
                 --paper-input-container-underline: {
                     display: none;
@@ -52,18 +54,43 @@
                 }
                 ;
             }
-            .text{
+
+            .text {
                 height: 200px;
+            }
+
+            #btn_post {
+                left: 80%;
+                top: 10px;
+            }
+
+            paper-button {
+                background: green;
+                color: white;
             }
         </style>
         <paper-card class="post">
             <div id="title">
-                <paper-input class="custom" label="TITULO" always-float-label char-counter maxlength="140"required auto-validate error-message="tu post requiere un muy buen titulo"></paper-input>
+                <paper-input class="custom" id="in_titulo" label="TITULO" always-float-label char-counter maxlength="140" required auto-validate
+                    error-message="tu post requiere un muy buen titulo" value="{{title}}"></paper-input>
             </div>
             <div id="content">
-                <paper-textarea class="cont" label="Contenido" no-label-float char-counter maxlength="240" rows="2" required auto-validate error-message="necesitas plasmar tus ideas"></paper-textarea>
+                <paper-textarea id="in_contenido" class="cont" label="Contenido" no-label-float char-counter maxlength="240" rows="2" required
+                    auto-validate error-message="necesitas plasmar tus ideas" value="{{body}}"></paper-textarea>
+            </div>
+            <div>
+                <paper-button id="btn_post" on-click="posting">POST</paper-button>
             </div>
         </paper-card>
+        <iron-ajax 
+        id="peticion"
+      method="POST"
+      url="https://posts-services.herokuapp.com/posts" 
+      hundle-s="json"
+      content-type="application/json" 
+      body="{{postear}}"
+      last-response="{{postPrueba}}">
+    </iron-ajax>
     </template>
     <script>
         (function postInput(customElements) {
@@ -72,8 +99,46 @@
             class PostInput extends Polymer.Element {
                 static get is() { return 'post-input' };
                 static get properties() {
-                    return {}
+                    return {
+                        local: {
+                            type: String,
+                            value: 'local'
+                        },
+                        title:{type:String},
+                        body:{type:String},
+                        postear: {
+                            type: Object,
+                            computed: "getPostear(title,body)"
+                            // value: {
+                            //     user: {
+                            //         email: "Aniya7@yahoo.com"
+                            //     },
+                            //     post: {
+                            //         title: {type:String},
+                            //         body: {type:String}
+                            //     }
+                            // }
+                        }
+                    }
                 }
+                getPostear(title,body){
+                    return {
+                                 user: {
+                                     email: "Aniya7@yahoo.com"
+                                 },
+                                 post: {
+                                     title: title,
+                                     body: body
+                                 }
+                             };
+                }
+
+
+                posting() {
+                    this.$.peticion.generateRequest();
+                }
+
+
             }
             customElements.define(PostInput.is, PostInput)
         }
