--- a/src/app/polymer-posts.html
+++ b/src/app/polymer-posts.html
@@ -73,15 +73,14 @@
       </app-header>
 
       <app-drawer-layout id="drawerLayout" force-narrow>
-
+        <post-input></post-input>
         <app-drawer slot="drawer">
           <div class="drawer-content">
-            <template is="dom-repeat" items="[[users]]">
+            <template is="dom-repeat" items="[[users]]" filtered="val()">
               <component-card data=[[item]]></component-card>
             </template>
           </div>
         </app-drawer>
-        
         <sample-content size="100"></sample-content>
       </app-drawer-layout>
     </app-header-layout>
