--- a/src/app/login-posts.html
+++ b/src/app/login-posts.html
@@ -53,7 +53,7 @@
         <h4>Ingrese a su cuenta</h4>
       </div>
       <div class="card-content">
-        <paper-input id="userEmail" label="Email" value="{{user}}" required auto-validate pattern="[a-z0-9._%+-A-Z]+@[a-z0-9.-]+\.[a-z]{2,3}$">
+        <paper-input id="userEmail" label="Email" value="{{user}}" required auto-validate pattern="[a-z0-9A-Z._%+-A-Z]+@[a-z0-9.-]+\.[a-z]{2,3}$">
         </paper-input>
         <paper-input label="Contraseña" type="password" id="userPassword" value="{{password}}" required auto-validate></paper-input>
         <paper-button raised class="button-login center-align" id="send" on-click="validationForm" >Inicar Sesión</paper-button>
