--- a/src/app/polymer-posts.html
+++ b/src/app/polymer-posts.html
@@ -52,7 +52,7 @@
       }
       component-card {
         margin: 5px;
-        -webkit-transition: box-shadow 1s; /* For Safari 3.1 to 6.0 */
+        -webkit-transition: box-shadow 1s;
         transition: box-shadow 1s;
       }
       .selected {
@@ -83,7 +83,6 @@
       </app-header>
 
       <app-drawer-layout id="drawerLayout" force-narrow>
-        <post-input></post-input>
         <app-drawer slot="drawer">
           <div class="drawer-content" id="drawerContent">
             <div class="current-user-card">
