--- a/src/app/polymer-posts.html
+++ b/src/app/polymer-posts.html
@@ -186,10 +186,10 @@
         }
 
         filterUsers(data) {
-          console.log(data);
           let withoutUsersNull = data.filter( d => d != null );
           this.set('users', withoutUsersNull.filter( l => l.email != localStorage.email ));
           this.set('currentUser', withoutUsersNull.filter( a => a.email == localStorage.email )[0]);
+          console.log(this.currentUser);
         }
 
         addClassSelected(e) {
