--- a/src/app/post-input.html
+++ b/src/app/post-input.html
@@ -20,14 +20,12 @@
         </custom-style>
         <style>
             .post {
-                width: 500px;
-                top: 50%;
-                left: 30%;
                 display: flex;
                 flex-direction: column;
                 padding: 30px;
+                margin: 10px;
                 text-align: justify;
-
+                background-color: whitesmoke;
             }
 
             paper-input.custom {
