--- a/src/app/post-input.html
+++ b/src/app/post-input.html
@@ -23,7 +23,7 @@
                 display: flex;
                 flex-direction: column;
                 padding: 30px;
-                margin: 10px;
+                margin: 10px 0px 10px 10px;
                 text-align: justify;
                 background-color: whitesmoke;
             }
