--- a/src/app/post-card.html
+++ b/src/app/post-card.html
@@ -37,6 +37,10 @@
         margin-top: 20px;
         flex-direction: column;
       }
+      .delete {
+        color: #000000ad;
+        float: right;
+      }
     </style>
     <paper-card id="card" >
       <div class="card-content current">
