--- a/src/app/component-card.html
+++ b/src/app/component-card.html
@@ -49,6 +49,9 @@
         flex-direction: column;
         align-items: center;
       }
+      paper-icon-button{
+        --paper-icon-button-ink-color: yellow;
+      }
     </style>
     <template is="dom-if" if="[[currentUser]]" id="repeater">
       <paper-card>
