--- a/src/app/polymer-posts.html
+++ b/src/app/polymer-posts.html
@@ -55,6 +55,10 @@
         -webkit-transition: box-shadow 1s;
         transition: box-shadow 1s;
       }
+      .list-posts{
+        display: flex;
+        flex-direction: column-reverse;
+      }
       .selected {
         box-shadow: 0px 0px 0px 2px #607D8B;
       }
@@ -101,7 +105,7 @@
             </div>
           </template>
           
-          <div class="list-posts">
+          <div class="list-posts" >
             <template is="dom-repeat" items="[[userSelected]]">
               <post-card post="[[item]]"></post-card>
             </template>
